--- a/proposal.html
+++ b/proposal.html
@@ -78,7 +78,7 @@
 
       <h2 class="section-title">4. Next steps</h2>
       <p>This proposal is a summary of our typical structure and approach. Specific terms—including governance rights, vesting, and operational roles—would be agreed in good faith and documented in formal agreements after mutual interest is confirmed. We welcome a conversation to discuss your venture and how this structure might work for you.</p>
-      <p>For inquiries, please get in touch through the contact section on our website.</p>
+      <p>For inquiries, please contact us through the contact section on our website.</p>
     </div>
   </main>
 
