--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="hero-eyebrow">A holding company built for founders</p>
         <h1 class="hero-title">We back upcoming entrepreneurs with capital, structure, and partnership.</h1>
         <p class="hero-subtitle">Bavlin is a strategic holding company looking to partner with ambitious founders—early stage or scaling—who want a long-term partner, not just capital. We bring governance, operational support, and patient capital so you can build something lasting.</p>
-        <a href="#contact" class="btn btn-primary">Get in touch</a>
+        <a href="#contact" class="btn btn-primary">Contact us</a>
       </div>
       <div class="hero-stats">
         <div class="stat"><span class="stat-value">Patient</span><span class="stat-label">Capital</span></div>
@@ -48,16 +48,16 @@
       <div class="container">
         <div class="section-header">
           <p class="section-eyebrow">Who we are</p>
-          <h2 class="section-title">A serious holding company—and we're looking for our first partners.</h2>
+          <h2 class="section-title">A holding company—and we are seeking our first partners.</h2>
         </div>
         <div class="about-grid">
-          <p class="about-lead">Bavlin is set up as a proper holding company: permanent capital, clear governance, and a mandate to build and hold businesses for the long term. We're not a fund with a clock—we're building a portfolio of companies we believe in, and we want to start by backing ambitious entrepreneurs who are building something real.</p>
+          <p class="about-lead">Bavlin is structured as a holding company with permanent capital, clear governance, and a mandate to build and hold businesses for the long term. Unlike a fund with a finite horizon, we are building a portfolio of companies we believe in, and we seek to begin by backing ambitious entrepreneurs who are building substantive ventures.</p>
           <div class="about-points">
             <div class="point">
               <span class="point-icon">—</span>
               <div>
                 <strong>Permanent capital</strong>
-                <p>No forced exits. We're aligned with you and your vision for the long run.</p>
+                <p>No forced exits. We are aligned with you and your vision for the long term.</p>
               </div>
             </div>
             <div class="point">
@@ -71,7 +71,7 @@
               <span class="point-icon">—</span>
               <div>
                 <strong>Founder-friendly</strong>
-                <p>We want you to stay in the driver's seat. We're here to strengthen, not replace.</p>
+                <p>Entrepreneurs retain operational control. We are here to strengthen, not replace.</p>
               </div>
             </div>
             <div class="point">
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="section-header">
           <p class="section-eyebrow">For founders</p>
-          <h2 class="section-title">Who we're looking to work with.</h2>
+          <h2 class="section-title">Partners we seek.</h2>
         </div>
         <div class="portfolio-grid">
           <article class="portfolio-card">
@@ -101,17 +101,17 @@
           <article class="portfolio-card">
             <span class="card-sector">Sectors</span>
             <h3>Gas stations, restaurants, laundromats, plumbing & more</h3>
-            <p>We're interested in essential, often brick-and-mortar businesses—gas stations, restaurants, laundromats, plumbing and trade services, and similar operations. If you run or are building in these sectors, we'd like to hear from you.</p>
+            <p>We are interested in essential, often brick-and-mortar businesses—gas stations, restaurants, laundromats, plumbing and trade services, and similar operations. If you operate or are building in these sectors, we invite you to reach out.</p>
           </article>
           <article class="portfolio-card">
             <span class="card-sector">Mindset</span>
             <h3>Building to last</h3>
-            <p>You're in it for the long haul and want a partner who won't push for a quick flip.</p>
+            <p>You are committed to long-term value creation and seek a partner who will not push for a short-term exit.</p>
           </article>
           <article class="portfolio-card">
             <span class="card-sector">Geography</span>
             <h3>Global</h3>
-            <p>We're open to ventures and entrepreneurs anywhere. What matters is fit and ambition.</p>
+            <p>We are open to ventures and entrepreneurs globally. What matters is strategic fit and ambition.</p>
           </article>
         </div>
       </div>
@@ -126,8 +126,8 @@
         <div class="approach-list">
           <div class="approach-item">
             <span class="approach-num">01</span>
-            <h3>Meet & align</h3>
-            <p>We get to know you, your business, and your vision. No pressure—we want to see if we're a fit.</p>
+            <h3>Meet and align</h3>
+            <p>We learn about you, your business, and your vision. We conduct an initial assessment to determine mutual fit.</p>
           </div>
           <div class="approach-item">
             <span class="approach-num">02</span>
@@ -163,7 +163,7 @@
             <h3 class="proposal-subtitle">3. No investment required</h3>
             <p>Entrepreneurs contribute commitment, expertise, and leadership—not capital. Equity is allocated to reflect that and align incentives.</p>
           </div>
-          <p class="proposal-cta">For full details, see the <a href="proposal.html">full proposal</a>. For inquiries, get in touch through the contact section below.</p>
+          <p class="proposal-cta">For full details, see the <a href="proposal.html">full proposal</a>. For inquiries, please contact us through the contact section below.</p>
         </div>
       </div>
     </section>
@@ -172,9 +172,9 @@
       <div class="container">
         <div class="contact-inner">
           <div class="contact-content">
-            <p class="section-eyebrow">Get in touch</p>
-            <h2 class="section-title">Building something? Let's talk.</h2>
-            <p>If you're an entrepreneur with ambition and a clear idea—early or scaling—we'd like to hear from you. Tell us about your venture and what you're looking for in a partner.</p>
+            <p class="section-eyebrow">Contact</p>
+            <h2 class="section-title">Building a venture? We welcome a conversation.</h2>
+            <p>If you are an entrepreneur with ambition and a clear vision—whether early stage or scaling—we invite you to reach out. Share your venture and what you seek in a partner.</p>
             <p><a href="proposal.html" style="color: rgba(255,255,255,0.9); text-decoration: underline;">Read our partnership proposal</a> for structure and terms.</p>
           </div>
           <div class="contact-address">
@@ -187,7 +187,7 @@
         <div class="contact-booking">
           <p class="section-eyebrow">Schedule a call</p>
           <h2 class="section-title">Book a meeting</h2>
-          <p class="contact-booking-lead">Choose a time that works for you. We're available Monday–Friday, 10:00 AM to 5:00 PM. <strong>You must provide your business details when booking</strong>—company name, what you do, and what you're looking for—so we can make the most of our conversation.</p>
+          <p class="contact-booking-lead">Select a time that suits your schedule. We are available Monday–Friday, 10:00 AM to 5:00 PM. <strong>Business details are required when booking</strong>—company name, business description, and partnership objectives—so we can prepare for a productive conversation.</p>
           <div class="calendly-wrap">
             <div class="calendly-inline-widget" data-url="https://calendly.com/prajwal-bavlin/30min?hide_gdpr_banner=1&hide_event_type_details=1&primary_color=1a1a1a" style="min-width:320px;height:630px;"></div>
           </div>
