--- a/proposal.html
+++ b/proposal.html
@@ -30,7 +30,7 @@
 <body class="proposal-page">
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="logo">Bavlin</a>
+      <a href="index.html" class="logo"><img src="bavlin-logo.png" alt="Bavlin" class="logo-img"></a>
       <nav class="nav">
         <a href="index.html#about">About</a>
         <a href="index.html#for-founders">For founders</a>
@@ -84,7 +84,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <a href="index.html" class="logo">Bavlin</a>
+      <a href="index.html" class="logo"><img src="bavlin-logo.png" alt="Bavlin" class="logo-img"></a>
       <div class="footer-right">
         <p class="footer-legal">This website does not constitute an offer or solicitation. <a href="legal.html">Legal notices</a>.</p>
         <p class="footer-equal">We are an equal opportunity company.</p>
