bavlin icon fix probably?

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bavlin | Backing Upcoming Entrepreneurs</title>
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="apple-touch-icon" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="apple-touch-icon" href="/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="logo"><img src="bavlin-logo.png" alt="Bavlin" class="logo-img"></a>
+      <a href="index.html" class="logo"><span class="logo-mark" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="36" height="36"><rect width="32" height="32" rx="4" fill="#1a1a1a"/><text x="16" y="22" text-anchor="middle" font-family="Georgia, serif" font-size="18" font-weight="600" fill="#fafaf9">B</text></svg></span><span class="logo-text">Bavlin</span></a>
       <nav class="nav">
         <a href="index.html#about">About</a>
         <a href="index.html#for-founders">For founders</a>
@@ -198,7 +198,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <a href="index.html" class="logo"><img src="bavlin-logo.png" alt="Bavlin" class="logo-img"></a>
+      <a href="index.html" class="logo"><span class="logo-mark" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="36" height="36"><rect width="32" height="32" rx="4" fill="#1a1a1a"/><text x="16" y="22" text-anchor="middle" font-family="Georgia, serif" font-size="18" font-weight="600" fill="#fafaf9">B</text></svg></span><span class="logo-text">Bavlin</span></a>
       <div class="footer-right">
         <p class="footer-legal">This website does not constitute an offer or solicitation. <a href="legal.html">Legal notices</a>.</p>
         <p class="footer-equal">We are an equal opportunity company.</p>
