--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <section id="about" class="section about">
-      <div class="container">
+      <div class="about-inner">
         <div class="section-header">
           <p class="section-eyebrow">Who we are</p>
           <h2 class="section-title">A holding company—and we are seeking our first partners.</h2>
