Completing Acquiring business

--- a/legal.html
+++ b/legal.html
@@ -32,7 +32,7 @@
       <a href="index.html" class="logo"><span class="logo-mark" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="36" height="36"><rect width="32" height="32" rx="4" fill="#1a1a1a"/><text x="16" y="22" text-anchor="middle" font-family="Georgia, serif" font-size="18" font-weight="600" fill="#fafaf9">B</text></svg></span><span class="logo-text">Bavlin</span></a>
       <nav class="nav">
         <a href="index.html#about">About</a>
-        <a href="index.html#for-founders">For founders</a>
+        <a href="index.html#acquisitions">Acquisitions</a>
         <a href="index.html#approach">Approach</a>
         <a href="index.html#proposal">Proposal</a>
         <a href="index.html#contact">Contact</a>
@@ -55,7 +55,7 @@
 
       <div class="legal-section">
         <h2>No offer or solicitation</h2>
-        <p>Nothing on this website constitutes an offer to sell or a solicitation of an offer to buy any security or interest in any entity, nor does it constitute an invitation or inducement to enter into any investment, partnership, or other transaction. Any partnership or investment would be subject to due diligence, negotiation, and formal documentation. No binding obligation arises from the content of this website or from any communication made through it.</p>
+        <p>Nothing on this website constitutes an offer to sell or a solicitation of an offer to buy any security or interest in any entity, nor does it constitute an invitation or inducement to enter into any investment, acquisition, or other transaction. Any acquisition would be subject to due diligence, negotiation, and formal documentation. No binding obligation arises from the content of this website or from any communication made through it.</p>
       </div>
 
       <div class="legal-section">
@@ -65,12 +65,12 @@
 
       <div class="legal-section">
         <h2>Risk disclosure</h2>
-        <p>Partnership with a holding company, and any investment or business venture, involves significant risk. There can be no assurance that any venture will achieve its objectives or that any investment will be profitable or preserve capital. Past performance (if any) is not indicative of future results. You should consider your own circumstances and seek appropriate professional advice before taking any action.</p>
+        <p>Acquisition by or partnership with a holding company, and any investment or business venture, involves significant risk. There can be no assurance that any venture will achieve its objectives or that any investment will be profitable or preserve capital. Past performance (if any) is not indicative of future results. You should consider your own circumstances and seek appropriate professional advice before taking any action.</p>
       </div>
 
       <div class="legal-section">
         <h2>Equal opportunity</h2>
-        <p>Bavlin is an equal opportunity company. We consider partnership opportunities and all business relationships without regard to race, color, religion, gender, national origin, age, disability, marital status, or any other characteristic protected by applicable law. We are committed to fair and inclusive practices in how we evaluate and work with entrepreneurs and partners.</p>
+        <p>Bavlin is an equal opportunity company. We consider acquisition opportunities and all business relationships without regard to race, color, religion, gender, national origin, age, disability, marital status, or any other characteristic protected by applicable law. We are committed to fair and inclusive practices in how we evaluate and work with counterparties and business owners.</p>
       </div>
 
       <div class="legal-section">
