adding all these changes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bavlin | Acquiring Businesses</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <title>Bavlin | Backing Upcoming Entrepreneurs</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="apple-touch-icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
@@ -18,7 +17,7 @@
       <a href="index.html" class="logo"><span class="logo-mark" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="36" height="36"><rect width="32" height="32" rx="4" fill="#1a1a1a"/><text x="16" y="22" text-anchor="middle" font-family="Georgia, serif" font-size="18" font-weight="600" fill="#fafaf9">B</text></svg></span><span class="logo-text">Bavlin</span></a>
       <nav class="nav">
         <a href="index.html#about">About</a>
-        <a href="index.html#acquisitions">Acquisitions</a>
+        <a href="index.html#for-founders">For founders</a>
         <a href="index.html#approach">Approach</a>
         <a href="index.html#proposal">Proposal</a>
         <a href="index.html#contact">Contact</a>
@@ -33,53 +32,53 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <p class="hero-eyebrow">A holding company that acquires businesses</p>
-        <h1 class="hero-title">We acquire businesses—in full, in part, or in part with you retaining operational control.</h1>
-        <p class="hero-subtitle">Bavlin acquires and operates companies for the long term. Sellers may divest entirely, sell a portion, or sell a portion while continuing to run operations. We welcome inquiries from qualified sellers.</p>
+        <p class="hero-eyebrow">A holding company built for founders</p>
+        <h1 class="hero-title">We back upcoming entrepreneurs with capital, structure, and partnership.</h1>
+        <p class="hero-subtitle">Bavlin is a strategic holding company looking to partner with ambitious founders—early stage or scaling—who want a long-term partner, not just capital. We bring governance, operational support, and patient capital so you can build something lasting.</p>
         <a href="#contact" class="btn btn-primary">Contact us</a>
       </div>
       <div class="hero-stats">
-        <div class="stat"><span class="stat-value">Acquire</span><span class="stat-label">Full or partial</span></div>
-        <div class="stat"><span class="stat-value">Operate</span><span class="stat-label">Hands-on</span></div>
-        <div class="stat"><span class="stat-value">Long-term</span><span class="stat-label">Hold</span></div>
+        <div class="stat"><span class="stat-value">Patient</span><span class="stat-label">Capital</span></div>
+        <div class="stat"><span class="stat-value">Partner</span><span class="stat-label">First</span></div>
+        <div class="stat"><span class="stat-value">Long-term</span><span class="stat-label">Horizon</span></div>
       </div>
     </section>
 
     <section id="about" class="section about">
-      <div class="about-inner">
+      <div class="container">
         <div class="section-header">
           <p class="section-eyebrow">Who we are</p>
-          <h2 class="section-title">A holding company that acquires and operates businesses</h2>
+          <h2 class="section-title">A holding company—and we are seeking our first partners.</h2>
         </div>
         <div class="about-grid">
-          <p class="about-lead">Bavlin is a corporation that acquires and operates businesses. We acquire companies—in full or through a majority stake—and operate them for the long term. We are not a fund that backs entrepreneurs in exchange for equity; we purchase businesses and operate them. We deploy permanent capital and active management to grow what we acquire.</p>
+          <p class="about-lead">Bavlin is structured as a holding company with permanent capital, clear governance, and a mandate to build and hold businesses for the long term. Unlike a fund with a finite horizon, we are building a portfolio of companies we believe in, and we seek to begin by backing ambitious entrepreneurs who are building substantive ventures.</p>
           <div class="about-points">
             <div class="point">
               <span class="point-icon">—</span>
               <div>
-                <strong>Three acquisition structures</strong>
-                <p>Full divestiture; partial sale; or partial sale with the seller retaining operational control. We structure each transaction to align with your objectives.</p>
+                <strong>Permanent capital</strong>
+                <p>No forced exits. We are aligned with you and your vision for the long term.</p>
               </div>
             </div>
             <div class="point">
               <span class="point-icon">—</span>
               <div>
-                <strong>We operate what we acquire</strong>
-                <p>We assume responsibility for daily operations, strategy, and governance. We are actively involved—not passive investors.</p>
+                <strong>Operational partnership</strong>
+                <p>Strategy, governance, and hands-on support when you need it—without taking over.</p>
               </div>
             </div>
             <div class="point">
               <span class="point-icon">—</span>
               <div>
-                <strong>Long-term hold</strong>
-                <p>We do not acquire for short-term resale. We build and hold acquired businesses for the long term.</p>
+                <strong>Founder-friendly</strong>
+                <p>Entrepreneurs retain operational control. We are here to strengthen, not replace.</p>
               </div>
             </div>
             <div class="point">
               <span class="point-icon">—</span>
               <div>
                 <strong>Social media marketing</strong>
-                <p>We bring proven expertise in social media strategy and execution—building brand presence, engagement, and customer acquisition across major platforms.</p>
+                <p>We bring proven expertise in social media strategy and execution—building brand presence, driving engagement, and scaling customer acquisition across major platforms to support your growth.</p>
               </div>
             </div>
           </div>
@@ -87,32 +86,32 @@
       </div>
     </section>
 
-    <section id="acquisitions" class="section portfolio">
+    <section id="for-founders" class="section portfolio">
       <div class="container">
         <div class="section-header">
-          <p class="section-eyebrow">Acquisitions</p>
-          <h2 class="section-title">Businesses we acquire</h2>
+          <p class="section-eyebrow">For founders</p>
+          <h2 class="section-title">Partners we seek.</h2>
         </div>
         <div class="portfolio-grid">
           <article class="portfolio-card">
-            <span class="card-sector">Deal type</span>
-            <h3>Three acquisition options</h3>
-            <p><strong>Full sale:</strong> divest 100% and exit. <strong>Partial sale:</strong> sell a portion; we acquire and operate that share. <strong>Partial sale with operational role:</strong> sell a portion and retain operational leadership under agreed terms.</p>
+            <span class="card-sector">Stage</span>
+            <h3>Early or scaling</h3>
+            <p>Pre-revenue with a clear path, or already generating traction and ready for a structured partner.</p>
           </article>
           <article class="portfolio-card">
             <span class="card-sector">Sectors</span>
             <h3>Gas stations, restaurants, laundromats, plumbing & more</h3>
-            <p>We acquire essential, often brick-and-mortar businesses—including gas stations, restaurants, laundromats, plumbing and trade services, and similar operations. Parties considering a sale are invited to contact us.</p>
+            <p>We are interested in essential, often brick-and-mortar businesses—gas stations, restaurants, laundromats, plumbing and trade services, and similar operations. If you operate or are building in these sectors, we invite you to reach out.</p>
           </article>
           <article class="portfolio-card">
-            <span class="card-sector">Stage</span>
-            <h3>Established or scaling</h3>
-            <p>We are interested in businesses with revenue and operations, or those ready to scale with capital and management.</p>
+            <span class="card-sector">Mindset</span>
+            <h3>Building to last</h3>
+            <p>You are committed to long-term value creation and seek a partner who will not push for a short-term exit.</p>
           </article>
           <article class="portfolio-card">
             <span class="card-sector">Geography</span>
             <h3>Global</h3>
-            <p>We consider acquisitions globally. We evaluate opportunities based on strategic fit, sector, and terms.</p>
+            <p>We are open to ventures and entrepreneurs globally. What matters is strategic fit and ambition.</p>
           </article>
         </div>
       </div>
@@ -122,23 +121,23 @@
       <div class="container">
         <div class="section-header">
           <p class="section-eyebrow">Our approach</p>
-          <h2 class="section-title">How we acquire</h2>
+          <h2 class="section-title">How we work with entrepreneurs.</h2>
         </div>
         <div class="approach-list">
           <div class="approach-item">
             <span class="approach-num">01</span>
-            <h3>Evaluate</h3>
-            <p>We review the business—operations, financials, and strategic fit—and assess whether an acquisition is appropriate for both parties.</p>
+            <h3>Meet and align</h3>
+            <p>We learn about you, your business, and your vision. We conduct an initial assessment to determine mutual fit.</p>
           </div>
           <div class="approach-item">
             <span class="approach-num">02</span>
-            <h3>Structure the deal</h3>
-            <p>We propose terms covering structure (full or partial), valuation, and transition. We work toward a clear, executable agreement.</p>
+            <h3>Structure together</h3>
+            <p>We design a partnership that works for you: capital, governance, and support tailored to your stage and goals.</p>
           </div>
           <div class="approach-item">
             <span class="approach-num">03</span>
-            <h3>Close and operate</h3>
-            <p>We close the transaction and assume operational control. We manage the business for the long term with active, hands-on oversight.</p>
+            <h3>Build long-term</h3>
+            <p>We stay involved as a true partner—strategy, governance, and growth—without taking over your company.</p>
           </div>
         </div>
       </div>
@@ -148,23 +147,23 @@
       <div class="container">
         <div class="section-header">
           <p class="section-eyebrow">Proposal</p>
-          <h2 class="section-title">Acquisition structure and our role</h2>
+          <h2 class="section-title">Partnership structure and engagement.</h2>
         </div>
-        <p class="proposal-disclaimer">This outline is not legally binding; it is a guideline. Any acquisition would be subject to formal, legally binding agreements.</p>
+        <p class="proposal-disclaimer">This outline is not legally binding—it is a guideline. Any partnership would be subject to formal, legally binding agreements.</p>
         <div class="proposal-content">
           <div class="proposal-block">
-            <h3 class="proposal-subtitle">1. Ownership</h3>
-            <p>We offer three structures: <strong>full divestiture</strong>; <strong>partial sale</strong>; or <strong>partial sale with the seller retaining operational control</strong>. We provide the capital; no investment is required from the seller.</p>
+            <h3 class="proposal-subtitle">1. Ownership structure</h3>
+            <p>Bavlin would hold a majority stake; the entrepreneur(s) would be provided with equity. No financial investment is required from the entrepreneur(s)—Bavlin provides all capital.</p>
           </div>
           <div class="proposal-block">
-            <h3 class="proposal-subtitle">2. Our role after acquisition</h3>
-            <p>We assume operational responsibility: daily operations, management, capital deployment, and strategy. We are actively involved—we operate the businesses we acquire.</p>
+            <h3 class="proposal-subtitle">2. Our role</h3>
+            <p>We are an active partner: daily operations and management, investing and capital deployment, and governance and strategy—not hands-off.</p>
           </div>
           <div class="proposal-block">
-            <h3 class="proposal-subtitle">3. No investment from seller</h3>
-            <p>No capital contribution is required from the seller. We fund the acquisition; the seller receives consideration in accordance with the agreed terms (full or partial exit).</p>
+            <h3 class="proposal-subtitle">3. No investment required</h3>
+            <p>Entrepreneurs contribute commitment, expertise, and leadership—not capital. Equity is allocated to reflect that and align incentives.</p>
           </div>
-          <p class="proposal-cta">For full details, see the <a href="proposal.html">full proposal</a>. For inquiries, please contact us via the contact section below.</p>
+          <p class="proposal-cta">For full details, see the <a href="proposal.html">full proposal</a>. For inquiries, please contact us through the contact section below.</p>
         </div>
       </div>
     </section>
@@ -174,21 +173,20 @@
         <div class="contact-inner">
           <div class="contact-content">
             <p class="section-eyebrow">Contact</p>
-            <h2 class="section-title">Considering a sale? We welcome your inquiry.</h2>
-            <p>Whether you are considering a full divestiture, a partial sale, or a partial sale with continued operational involvement—we invite you to contact us. Please provide an overview of your company and your objectives.</p>
-            <p><a href="proposal.html" style="color: rgba(255,255,255,0.9); text-decoration: underline;">Read our acquisition proposal</a> for structure and terms.</p>
+            <h2 class="section-title">Building a venture? We welcome a conversation.</h2>
+            <p>If you are an entrepreneur with ambition and a clear vision—whether early stage or scaling—we invite you to reach out. Share your venture and what you seek in a partner.</p>
+            <p><a href="proposal.html" style="color: rgba(255,255,255,0.9); text-decoration: underline;">Read our partnership proposal</a> for structure and terms.</p>
           </div>
           <div class="contact-address">
             <p>Bavlin Holdings</p>
-            <p>Acquisitions considered globally</p>
-            <p style="margin-top: 0.75rem;">Available for calls 10:00 AM – 5:00 PM (local time)</p>
+            <p>Open to ventures globally</p>
+            <p style="margin-top: 0.75rem;">Available for calls 10:00 AM – 5:00 PM</p>
           </div>
         </div>
 
         <div class="contact-booking">
           <p class="section-eyebrow">Schedule a call</p>
-          <h2 class="section-title">Schedule a meeting</h2>
-          <p class="contact-booking-lead">Select an available time below. We are available Monday–Friday, 10:00 AM to 5:00 PM. <strong>Business details are required when booking</strong>—company name, business description, and reason for considering a sale—so that we can prepare for a productive discussion.</p>
+          <h2 class="section-title">Book a meeting</h2>
           <div class="calendly-wrap">
             <div class="calendly-inline-widget" data-url="https://calendly.com/prajwal-bavlin/30min?hide_gdpr_banner=1&hide_event_type_details=1&primary_color=1a1a1a" style="min-width:320px;height:630px;"></div>
           </div>
