Putting back the latest change

--- a/proposal.html
+++ b/proposal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Partnership Proposal | Bavlin</title>
+  <title>Acquisition Proposal | Bavlin</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="apple-touch-icon" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
       <a href="index.html" class="logo"><span class="logo-mark" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="36" height="36"><rect width="32" height="32" rx="4" fill="#1a1a1a"/><text x="16" y="22" text-anchor="middle" font-family="Georgia, serif" font-size="18" font-weight="600" fill="#fafaf9">B</text></svg></span><span class="logo-text">Bavlin</span></a>
       <nav class="nav">
         <a href="index.html#about">About</a>
-        <a href="index.html#for-founders">For founders</a>
+        <a href="index.html#acquisitions">Acquisitions</a>
         <a href="index.html#approach">Approach</a>
         <a href="index.html#proposal">Proposal</a>
         <a href="index.html#contact">Contact</a>
@@ -50,35 +50,41 @@
       <a href="index.html" class="back-link">← Back to home</a>
 
       <div class="doc-header">
-        <h1 class="doc-title">Partnership Proposal for Entrepreneurs</h1>
-        <p class="doc-meta">Bavlin Holdings — Outline of structure and engagement</p>
+        <h1 class="doc-title">Acquisition Proposal</h1>
+        <p class="doc-meta">Bavlin — Outline of acquisition structure and our operational role</p>
       </div>
 
-      <p class="doc-disclaimer"><strong>This document is not legally binding.</strong> It is intended solely as a guideline to outline our typical structure and approach. Any partnership would be subject to formal documentation and legally binding agreements agreed by both parties.</p>
+      <p class="doc-disclaimer"><strong>This document is not legally binding.</strong> It is intended solely as a guideline to our typical acquisition structure and approach. Any acquisition would be subject to formal documentation and legally binding agreements executed by both parties.</p>
 
-      <p>This document outlines the standard structure and level of engagement that Bavlin proposes when entering into a partnership with entrepreneurs. It is intended as a clear point of departure for discussions and may be adapted to the specific needs of each venture.</p>
+      <p>This document outlines how Bavlin acquires businesses and our role following acquisition. We offer three structures and adapt terms to each seller's objectives.</p>
 
-      <h2 class="section-title">1. Ownership structure</h2>
-      <p>Under the proposed structure, Bavlin would hold a majority stake in the company, with the entrepreneur(s) being provided with equity in the venture. This reflects Bavlin’s role as the sole capital provider and strategic partner, while ensuring that founding leadership retains meaningful ownership and alignment with the long-term success of the business.</p>
-      <div class="highlight-box">
-        <p>No financial investment is required from the entrepreneur(s). Bavlin provides all capital required to establish and operate the venture. Equity for the entrepreneur(s) is allocated as part of the partnership structure.</p>
-      </div>
-
-      <h2 class="section-title">2. Role and involvement of Bavlin</h2>
-      <p>Bavlin does not operate as a passive or hands-off investor. We are an active partner in the businesses we back. Our involvement includes:</p>
+      <h2 class="section-title">1. Ownership — three structures</h2>
+      <p>We offer three acquisition structures:</p>
       <ul>
-        <li><strong>Daily operations and management:</strong> We participate in day-to-day operational oversight and decision-making, working alongside the entrepreneur(s) to execute strategy, manage resources, and deliver results.</li>
-        <li><strong>Investing and capital deployment:</strong> We are responsible for all investment and funding decisions, ensuring the company has the capital and structure needed to grow in a disciplined manner.</li>
-        <li><strong>Governance and strategy:</strong> We contribute to strategic direction, governance, and key commercial and operational choices, with the aim of building a sustainable and scalable business.</li>
+        <li><strong>Full divestiture.</strong> The seller transfers 100% of the business; we acquire and operate. The seller exits entirely.</li>
+        <li><strong>Partial sale.</strong> The seller transfers a portion (e.g. a majority stake); we acquire that share and operate. The seller may retain a minority interest or exit fully in respect of the transferred portion.</li>
+        <li><strong>Partial sale with retained operational role.</strong> The seller transfers a portion and continues to manage the business under mutually agreed terms—we acquire; the seller retains operational leadership.</li>
       </ul>
-      <p>This model is designed for founders who want a committed, hands-on partner—not only capital but also operational and strategic support—while retaining a significant stake and a central role in the venture.</p>
+      <p>Bavlin provides all consideration for the acquisition; the seller is not required to invest in the transaction.</p>
+      <div class="highlight-box">
+        <p>No financial investment is required from the seller. We fund the acquisition. The seller receives consideration (cash and/or other agreed terms) in accordance with the purchase agreement. The structure depends on which option the parties select.</p>
+      </div>
 
-      <h2 class="section-title">3. No investment required from entrepreneurs</h2>
-      <p>Entrepreneurs are not required to contribute capital to the company as a condition of the partnership. Bavlin provides the investment required to fund the venture; the entrepreneur(s)’ contribution is their commitment, expertise, and leadership. Equity is provided to the entrepreneur(s) to reflect that contribution and to align incentives over the long term.</p>
+      <h2 class="section-title">2. Our role after acquisition</h2>
+      <p>Bavlin operates the businesses we acquire. We are not passive owners. Our involvement includes:</p>
+      <ul>
+        <li><strong>Daily operations and management:</strong> We assume responsibility for day-to-day operations and decision-making—strategy, resources, and execution—so that the business continues to perform and grow.</li>
+        <li><strong>Capital deployment:</strong> We are responsible for capital and investment decisions, ensuring the company has the structure and funding required to grow in a disciplined manner.</li>
+        <li><strong>Governance and strategy:</strong> We set strategic direction, governance, and key commercial and operational decisions, with the aim of building a sustainable, scalable business for the long term.</li>
+      </ul>
+      <p>We acquire in order to operate—except where the parties agree on a partial sale with the seller retaining operational control, in which case the seller continues to manage operations under agreed terms.</p>
+
+      <h2 class="section-title">3. No investment from seller</h2>
+      <p>The seller is not required to contribute capital. We fund the acquisition. The seller's obligations are to provide information, cooperate on due diligence and transition, and complete the sale. Consideration to the seller is as set out in the purchase agreement (full or partial exit).</p>
 
       <h2 class="section-title">4. Next steps</h2>
-      <p>This proposal is a summary of our typical structure and approach. Specific terms—including governance rights, vesting, and operational roles—would be agreed in good faith and documented in formal agreements after mutual interest is confirmed. We welcome a conversation to discuss your venture and how this structure might work for you.</p>
-      <p>For inquiries, please contact us through the contact section on our website.</p>
+      <p>This proposal summarizes our typical acquisition structure and approach. Specific terms—including structure (full sale, partial sale, or partial sale with retained operational role), valuation, transition, and roles—would be agreed in good faith and documented in formal agreements once mutual interest is confirmed. We welcome inquiries from parties considering a sale.</p>
+      <p>For inquiries, please contact us via the contact section on our website.</p>
     </div>
   </main>
 
