Updating hero pages

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <main>
     <section class="hero">
+      <div class="hero-inner">
       <div class="hero-content">
         <p class="hero-eyebrow">A holding company that acquires businesses</p>
         <h1 class="hero-title">We acquire businesses—in full, in part, or in part with the seller retaining operational control.</h1>
@@ -41,6 +42,7 @@
         <div class="stat"><span class="stat-value">Acquire</span><span class="stat-label">Full or partial</span></div>
         <div class="stat"><span class="stat-value">Operate</span><span class="stat-label">Hands-on</span></div>
         <div class="stat"><span class="stat-value">Long-term</span><span class="stat-label">Hold</span></div>
+      </div>
       </div>
     </section>
 
