Adding just within texas context

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           </article>
           <article class="portfolio-card">
             <span class="card-sector">Geography</span>
-            <h3>Global</h3>
-            <p>We consider acquisitions globally. We evaluate opportunities based on strategic fit, sector, and terms.</p>
+            <h3>Currently Texas</h3>
+            <p>We are currently considering acquisitions within Texas. We evaluate opportunities based on strategic fit, sector, and terms.</p>
           </article>
         </div>
       </div>
@@ -181,7 +181,7 @@
           </div>
           <div class="contact-address">
             <p>Bavlin Holdings</p>
-            <p>Acquisitions considered globally</p>
+            <p>Acquisitions considered within Texas</p>
             <p style="margin-top: 0.75rem;">Available for calls 10:00 AM – 5:00 PM (local time)</p>
           </div>
         </div>
